# rusty-ds

./: Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  notebook.ipynb  shields.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: CICD.yml
data/: sample.csv  sample.json
src/: lib.rs  main.rs
