[package]
name = "rusty-ds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = {version="0.32.1", features=["describe", "json"]}
clap = {version="4.0.32", features=["derive"]}
serde_json = "1.0.105"